<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pomoves</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="POMODORO">Pomodoro</string>
    <string name="SHORT_BREAK">Short break</string>
    <string name="LONG_BREAK">Long break</string>
    <string name="UNKNOWN">Unknown</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">Status</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="day_title_today">Today</string>
    <string name="day_title_yesterday">Yesterday</string>
    <string name="day_title_tomorrow">Tomorrow</string>

    <!-- Shown in the 'About' window of the app. -->
    <string name="about_body">
<![CDATA[
        <b>Google I/O 2014</b><br>
        Version %s<br><br>
        <a href="http://m.google.com/utos">Terms of Service</a><br><br>
        <a href="http://www.google.com/policies/privacy/">Privacy Policy</a>
    ]]>
    </string>

    <!-- Shown as a link in the About screen of the app; user can click to see the EULA. -->
    <string name="about_eula">End User License Agreement</string>

    <!-- Shown as a link in the About screen of the app; user can click it to see the licenses. -->
    <string name="about_licenses">Open Source Licenses</string>

    <!-- Label on a button that the user clicks to accept a license agreement. -->
    <string name="accept">Accept</string>

    <!-- Label on a button that, when clicked, allows user to add an account to the device. -->
    <string name="add_account">Add Account</string>

    <!-- Title text for dialog screen about the application -->
    <string name="title_about">About</string>

    <!-- A single button shown on informative popups, like EULA, open source licenses and About -->
    <string name="ok">OK</string>

    <!--
   Message shown in a toast (popup) when the user clicks to change the active account but
   there is no network connection
    -->
    <string name="no_connection_cant_login">Can\'t sign in. Check your network connection.</string>

    <!--
    Error message that shows when the user tries to use the app without a Google account
    configured on their device.
    -->
    <string name="google_account_required_message">To use this application, you must have at least one Google account on your device.</string>

    <!--
    Title for an error message that appears when the user tries to use the app without
    a Google account configured on their device.
    -->
    <string name="google_account_required_title">Google Account Required</string>

    <!--
         Button of a popup that shows up when the user has no Google account registered in the
        device. The popup says that the user needs to have at least one Google account registered in the
        device to be able to use the app. [CHAR_LIMIT=20]
    -->
    <string name="not_now">Not now</string>
    <string name="navdrawer_item_timer">Timer</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_sign_in">Sign in</string>
    <string name="title_settings">Settings</string>

    <!-- Summary in the Settings screen for the "Pomodoro Duration" option -->
    <string name="pref_pomodoro_duration_description">The duration of focused intervals.</string>

    <!-- Title in the Settings screen for the "Pomodoro Duration" option -->
    <string name="pref_pomodoro_duration_title">Focus duration</string>

    <!-- Summary in the Settings screen for the "Short Break" option -->
    <string name="pref_short_duration_description">The duration of short breaks.</string>

    <!-- Title in the Settings screen for the "Short Break" option -->
    <string name="pref_short_duration_title">Short break duration</string>

    <!-- Summary in the Settings screen for the "Long Break" option -->
    <string name="pref_long_duration_description">The duration of long breaks.</string>

    <!-- Title in the Settings screen for the "Long Break" option -->
    <string name="pref_long_duration_title">Long break duration</string>


    <string name="title_activity_stats">Stats</string>
    <string name="navdrawer_item_stats">Stats</string>
    <string name="pref_category_connect">Connect</string>
    <string name="pref_google_fit_enabled_description">Enable access to Google Fit Data</string>
    <string name="pref_google_fit_enabled_title">Google Fit</string>
    <string name="title_activity_charts">Charts</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_enabled_title">Vibrate</string>
    <string name="pref_notifications_enabled_description">Vibrate when changing activities</string>

</resources>
