<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="25"
        android:key="pref_pomodoro_duration"
        android:maxLength="2"
        android:numeric="integer"
        android:summary="@string/pref_pomodoro_duration_description"
        android:title="@string/pref_pomodoro_duration_title"/>

    <EditTextPreference
        android:defaultValue="5"
        android:key="pref_short_break_duration"
        android:maxLength="2"
        android:numeric="integer"
        android:summary="@string/pref_short_duration_description"
        android:title="@string/pref_short_duration_title"/>

    <EditTextPreference
        android:defaultValue="15"
        android:key="pref_long_break_duration"
        android:maxLength="2"
        android:numeric="integer"
        android:summary="@string/pref_long_duration_description"
        android:title="@string/pref_long_duration_title"/>

    <PreferenceCategory
        android:title="@string/pref_category_connect">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_google_fit_enabled"
            android:summary="@string/pref_google_fit_enabled_description"
            android:title="@string/pref_google_fit_enabled_title"/>
    </PreferenceCategory>
</PreferenceScreen>
